--- a/style.css
+++ b/style.css
@@ -1,63 +1,70 @@
-:root{/*-- pour declarer une variable*/
-    --color-text : #fff;
-    --color-button : #820029;
-    --color-button2 :#580101;
+:root{                                  /* "--" pour déclarer une variable*/
+    --color-white : #fff;
+    --color-light-red : #820029;
+    --color-dark-red :#580101;
     --color-background :#1A1A1A;
     --color-black :#000;
 }
 
-main{
-    max-width: 100%;
+.logo{                                 /* "." pour déclarer une class*/
+    width: 280px;                      /*définit la largeur (de l'image en l'occurence)*/
 }
 
-::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;   /*sera inutile a terme*/
-}
-::-webkit-scrollbar-track {
-    background: var(--color-black);
-}
-::-webkit-scrollbar-thumb {
-    background: var(--color-button);
+.link {
+    display: flex;                     /* Boîte flexible pour bouger facilement les éléments internes */
+    align-items: center;               /* Alignement vertical au centre */
+    justify-content: space-between;    /* Répartit l'espace horizontal entre les éléments (en les mettant sur les bords) */
+    gap: 20px;                         /* Espace entre les éléments */
 }
 
-.link{   /* . pour une class*/
-    display : flex;
-    gap : 20px;
-    align-items: center;
-    justify-content: space-between;
+.button_billeterie{
+    background-color: var(--color-light-red);
+    padding: 20px 100px;               /*Application symetrique de padding et répartition (top et bottom :35px, right et left :100xp)*/
+    margin-bottom: 15px;               /*Espacement entre le boutton et l'horaire en dessous*/
 }
 
-body{ 
-    color: var(--color-text);
-    background: var(--color-background);
-
-}
-
-nav ul li a{
-    color: var(--color-text);
-    text-decoration: none;
-    font-size: 25px;
-    position: relative;
-
-}
-
-nav ul li a::after{
-    content: '';
-    width: 6;
-    height: 6px;
-    background: var(--color-button);
+.button_billeterie_slider{
+    display: flex;
     position: absolute;
-    left: 0;
-    bottom: -6px;
-    transition: 0.5s;
+    top: 900px;                     /*ya moyen de faire mieux*/
+    left: 20px;
+    background-color: var(--color-light-red);
+    align-items: center; /* Aligner le contenu verticalement au centre */
+    
 }
-nav ul li a:hover::after{
-    width: 100%;
 
+.light_red{
+    background-color: var(--color-light-red);   /*couleur de fond rouge clair*/
 }
-.logo{
-    width: 280px;
+
+.dark_red{
+    background-color:  var(--color-dark-red);   /*couleur de fond rouge foncé*/
+}
+
+#etatOuverture img {                            /* "#" pour déclarer une id*/
+    vertical-align: middle;
+    width: 29px;
+    height: 20px;
+}
+
+.image-slideshow .image:first-child {
+    display: block;                            /* display: block affiche l'élément en tant que bloc, occupant toute la largeur disponible */
+    position:relative;              /*pas certain de celui la mais si ça marche pas toucher*/
+}
+
+.fade {
+    animation-name: fade;                      /*transition fondu*/
+    animation-duration: 2s;
+}
+
+.image{
+    display: none;
+}
+
+.image-car{                                     /*Pour "image-carroussel"*/
+    width: 100%;
+    height: 600px;
+    object-fit: cover;
 }
 
 .container_info{
@@ -73,7 +80,7 @@ nav ul li a:hover::after{
 
 .info_content{
     display: flex;
-    justify-content:  space-between;
+    justify-content: space-between;
     max-width: 100%;
 }
 
@@ -83,13 +90,13 @@ nav ul li a:hover::after{
     }
 }
 
-.text_column{
+.text_column{                       /*colonne de texte*/
     padding-left: 30px;
     width: 50%;
     padding-right: 40px;
 }
 
-.image_quote_column{
+.image_quote_column{                /*colonne image et citation*/
     width: 50%;
     padding-left: 40px;
 }
@@ -100,13 +107,7 @@ nav ul li a:hover::after{
     max-width: 100%;
     margin-bottom: 5%;
     margin-top: 5%;
-    flex-wrap: wrap;
-}
-
-
-.grimoire{
-    width: 100%;
-    height: 700px;
+    flex-wrap: wrap;                /* /!\ utile ? (ce qu'a dit l'intervenant)*/
 }
 
 .container_expo{
@@ -117,6 +118,115 @@ nav ul li a:hover::after{
     padding-right: 75px;
 }
 
+.grimoire{
+    width: 100%;
+    height: 700px;
+}
+
+.button_savoir_plus {
+    display: flex;
+    position: absolute;
+    bottom: 100px;
+    left: 100px;
+    background-color: var(--color-light-red);
+    align-items: center; /* Aligner le contenu verticalement au centre */
+}
+
+.button_savoir_plus_ALaUne {
+    display: flex;
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    background-color: var(--color-light-red);
+    align-items: center; /* Aligner le contenu verticalement au centre */
+}
+
+.square_info{
+    background-color: var(--color-dark-red);
+    padding-left: 10px;
+    padding-right: 10px;
+    align-self:flex-start;                      /*ne fonctionne pas j'arrive pas a le caler a gauche*/
+}
+
+.image_info{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    max-height: 70px;
+    max-width: 70px;
+}
+
+.Space_savoir_plus{
+    margin-left: 10px;
+    vertical-align: middle
+}
+
+
+
+
+
+
+
+
+
+
+
+
+main{
+    max-width: 100%;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;   /*normalement invisible*/
+}
+::-webkit-scrollbar-track {
+    background: var(--color-black);
+}
+::-webkit-scrollbar-thumb {
+    background: var(--color-light-red);
+}
+
+
+
+body{ 
+    color: var(--color-white);
+    background: var(--color-background);
+
+}
+
+nav ul li a{
+    color: var(--color-white);
+    text-decoration: none;
+    font-size: 25px;
+    position: relative;
+
+}
+
+nav ul li a::after{
+    content: '';
+    width: 6;
+    height: 6px;
+    background: var(--color-light-red);
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    transition: 0.5s;
+}
+nav ul li a:hover::after{
+    width: 100%;
+
+}
+
+
+
+
+
+
+
+
+
+
+
 .container_news{
     margin-left: auto; 
     margin-right: auto;
@@ -126,6 +236,10 @@ nav ul li a:hover::after{
 }
 
 .container_animations{
+    margin-left: auto; 
+    margin-right: auto;
+    padding-left: 75px;
+    padding-right: 75px; 
     position: relative;
     border-top: #000;
     border-bottom: #000;
@@ -155,7 +269,6 @@ nav ul li a:hover::after{
         transform: translateX(0.1%);
     }
 }
-
 
 .slide-right {
     transform: translateX(100%);
@@ -195,17 +308,17 @@ nav ul li a:hover::after{
     padding-left: 75px;
     padding-right: 75px; 
 }
+
 @media screen and (max-width: 1100px){
     .container_carte{
         flex-direction: column;
     }
 }
 
-
 h1{
     margin-top: 50px;
     margin-bottom: 50px;
-    color: var(--color-text);
+    color: var(--color-white);
     text-align: center;
     font-family: Abhaya Libre ExtraBold;
     font-size: 90px;
@@ -218,7 +331,7 @@ h1{
     h1{
         margin-top: 25px;
         margin-bottom: 25px;
-        color: var(--color-text);
+        color: var(--color-white);
         text-align: center;
         font-family: Abhaya Libre ExtraBold;
         font-size: 50px;
@@ -230,9 +343,9 @@ h1{
 
 
 h2{
-    margin-top: 5%;
-    margin-bottom: 5%;
-    color: var(--color-text);
+    margin-top: 10%;
+    margin-bottom: 10%;
+    color: var(--color-white);
     font-family: Abhaya Libre ExtraBold;
     font-size: 70px;
     font-style: normal;
@@ -245,7 +358,7 @@ h2{
     h2{
         margin-top: 10%;
         margin-bottom: 10%;
-        color: var(--color-text);
+        color: var(--color-white);
         font-family: Abhaya Libre ExtraBold;
         font-size: 40px;
         font-style: normal;
@@ -258,7 +371,7 @@ h2{
 h3{
     margin-top: 25px;
     margin-bottom: 20px;
-    color: var(--color-text);
+    color: var(--color-white);
     font-family: Inter;
     font-size: 50px;
     font-style: normal;
@@ -270,7 +383,7 @@ h3{
     h3{
         margin-top: 25px;
         margin-bottom: 20px;
-        color: var(--color-text);
+        color: var(--color-white);
         font-family: Inter;
         font-size: 16px;
         font-style: normal;
@@ -280,7 +393,7 @@ h3{
 }
 
 .texM{
-    color: var(--color-text);
+    color: var(--color-white);
     font-family: Inter;
     font-size: 30px;
     font-style: normal;
@@ -289,13 +402,11 @@ h3{
     width: 705px;
     height: 224px;
     flex-shrink: 0;
-    margin-bottom: 5%;
-    margin-top: 5%;
 }
 
 @media screen and (max-width: 1100px){
     .texM{
-        color: var(--color-text);
+        color: var(--color-white);
         font-family: Inter;
         font-size: 15px;
         font-style: normal;
@@ -304,17 +415,12 @@ h3{
         width: 352px;
         height: 112px;
         flex-shrink: 0;
-        margin-bottom: 5%;
-        margin-top: 5%;
     }
 }
 
-.texSpace{
-    margin-bottom: 7%;
-}
 
 .texMbold{
-    color: var(--color-text);
+    color: var(--color-white);
     font-family: Inter;
     font-size: 30px;
     font-style: normal;
@@ -324,13 +430,11 @@ h3{
     height: 224px;
     flex-shrink: 0;
     font-weight: bold;
-    margin-bottom: 5%;
-    margin-top: 5%;
 }
 
 @media screen and (max-width: 1100px){
     .texMbold{
-        color: var(--color-text);
+        color: var(--color-white);
         font-family: Inter;
         font-size: 15px;
         font-style: normal;
@@ -346,7 +450,7 @@ h3{
 }
 
 .texS{
-    color: var(--color-text);
+    color: var(--color-white);
     font-family: Inter;
     font-size: 25px;
     font-style: normal;
@@ -358,7 +462,7 @@ h3{
 
 @media screen and (max-width: 1100px){
     .texS{
-        color: var(--color-text);
+        color: var(--color-white);
         font-family: Inter;
         font-size: 14px;
         font-style: normal;
@@ -373,7 +477,7 @@ h3{
     width: 553px;
     height: 185px;
     flex-shrink: 0;
-    color: var(--color-text);
+    color: var(--color-white);
     font-family: Inter;
     font-size: 25px;
     font-style: normal;
@@ -389,7 +493,7 @@ h3{
         width: 276px;
         height: 92px;
         flex-shrink: 0;
-        color: var(--color-text);
+        color: var(--color-white);
         font-family: Inter;
         font-size: 14px;
         font-style: normal;
@@ -405,7 +509,7 @@ h3{
     width: 554px;
     height: 121px;
     flex-shrink: 0;   
-    color: var(--color-text);
+    color: var(--color-white);
     font-family: Abhaya Libre;
     font-size: 20px;
     font-style: normal;
@@ -413,7 +517,7 @@ h3{
     line-height: normal;
     border-left: solid 0.2em;
     padding: 0.5em;
-    border-left-color: var(--color-button);
+    border-left-color: var(--color-light-red);
     font-style: italic;
     margin-bottom: 5%;
     margin-top: 5%;
@@ -424,7 +528,7 @@ h3{
         width: 100%;
         height: 46px;
         flex-shrink: 0;
-        color: var(--color-text);
+        color: var(--color-white);
         font-family: Abhaya Libre;
         font-size: 14px;
         font-style: normal;
@@ -442,7 +546,7 @@ h3{
     width: 554px;
     height: 121px;
     flex-shrink: 0;   
-    color: var(--color-text);
+    color: var(--color-white);
     font-family: Abhaya Libre;
     font-size: 20px;
     font-style: normal;
@@ -450,7 +554,7 @@ h3{
     line-height: normal;
     border-left: solid 0.2em;
     padding: 0.2em;
-    border-left-color: var(--color-button);
+    border-left-color: var(--color-light-red);
     font-style: italic;
     font-weight: bold;
     margin-bottom: 5%;
@@ -462,7 +566,7 @@ h3{
         width: 100%;
         height: 46px;
         flex-shrink: 0;
-        color: var(--color-text);
+        color: var(--color-white);
         font-family: Abhaya Libre;
         font-size: 14px;
         font-style: normal;
@@ -470,7 +574,7 @@ h3{
         line-height: normal;
         font-weight: bold;
         padding: 0.2em;
-        border-left-color: var(--color-button);
+        border-left-color: var(--color-light-red);
         font-style: italic;
         border-left: solid 0.2em;
         margin-bottom: 5%;
@@ -483,7 +587,7 @@ nav{
     font-family: Abhaya Libre ExtraBold;
     justify-content: center;
     text-decoration: none;
-    color: var(--color-text);
+    color: var(--color-white);
     margin-left: 10%;
 }
 
@@ -496,7 +600,6 @@ nav{
 }
 
 header{
-    background-color: rgb(14, 13, 13);
     display: flex;
     align-items: center;
     margin-left: auto;
@@ -505,47 +608,18 @@ header{
     padding-left: 1%;
 }
 
-.image_info{
-    padding-top: 10px;
-    padding-bottom: 10px;
-    max-height: 50px;
-    max-width: 50px;
-}
 
-.bouton_billeterie{
-    background-color: var(--color-button);
-    padding: 35px 100px;
-    margin-bottom: 15px;
-}
 
-.button_savoir_plus {
-    display: flex;
-    position: absolute;
-    bottom: 100px;
-    left: 100px;
-}
 
-.red1{
-    background-color: #580101;
-}
 
-.red{
-    background-color: #820029;
-}
 
-#header-droite{
-    display: flex;
-}
 
-#etatOuverture img {
-    vertical-align: middle;
-    width: 29px;
-    height: 20px;
-}
+
+
 
 footer {
     display: flex;
-    color: var(--color-text);
+    color: var(--color-white);
     font-size: 24px;
     font-style: normal;
     font-weight: 400;
@@ -561,7 +635,7 @@ footer nav{
     font-family: Abhaya Libre ExtraBold;
     justify-content: space-around;
     text-decoration: none;
-    color: var(--color-text);
+    color: var(--color-white);
 }
 
 .Facebook{
@@ -607,7 +681,7 @@ footer nav{
 
 .horaires{
     padding: 90px;
-    background-color: var(--color-button);
+    background-color: var(--color-light-red);
     height: 500px;
     width: 600px;
     font-size: 25px;
@@ -619,7 +693,7 @@ footer nav{
     flex-direction: column;
     justify-content: space-between;
     padding: 90px;
-    background-color: var(--color-button);
+    background-color: var(--color-light-red);
     height: 500px;
     width: 600px;
     font-size: 25px;
@@ -635,6 +709,7 @@ footer nav{
 
 .colonne_picto img{
     margin-right: 5%;
+    width: 10%;
     width: 20%;
 }
 
@@ -753,11 +828,7 @@ footer nav{
     height: 100%;
 }
 
-.image-car{
-    width: 100%;
-    height: 600px;
-    object-fit: cover;
-}
+
 
 .card-content {
     position: absolute;
@@ -791,18 +862,10 @@ footer nav{
     }
 }
 
-.fade {
-    animation-name: fade;
-    animation-duration: 2s;
-}
 
-.image{
-    display: none;
-}
 
-.image-slideshow .image:first-child {
-    display: block;
-}
+
+
 
 @keyframes fade {
     from {opacity: .4}
@@ -863,7 +926,7 @@ footer nav{
     margin-right: 200px;
 
 
-    background-color: var(--color-button);
+    background-color: var(--color-light-red);
   }
   .Retrouvez{
     text-align: center;
